# wagtail-localize

./: .coveragerc  .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  mkdocs.yml  netlify.toml  package-lock.json  package.json  pyproject.toml  ruff.toml  setup.cfg  setup.py  testmanage.py  tox.ini  tsconfig.json  webpack.config.js
.circleci/: config.yml  report_nightly_build_failure.py  trigger-nightly-build.sh
.github/scripts/: report_nightly_build_failure.py
.github/workflows/: nigthly-tests.yml  publish.yml  ruff.yml  test.yml
.tx/: config
docs/: index.md  pontoon.md  setup.md
docs/concept/: content-paths.md  segment-types.md  segments.md  translatable-fields-autogen.md  tree-synchronisation.md
docs/how-to/: configure-background-tasks.md  field-configuration.md  from-scratch.md  installation.md  modeladmin.md  setup.md  tips.md  translation-services.md
docs/ref/: segments.md  strings.md  synctree.md  translatable-fields.md
docs/reference/: core.md  segments.md  translation.md  translation_memory.md  workflow.md
docs/stylesheets/: mkdocstrings.css
docs/theme_overrides/: main.html
docs/tutorial/: 1-project-set-up.md  1-starting-a-new-project.md  2-configure-wagtail-localize.md  2-translatable-page-models.md  3-content.md  3-translation-workflow.md  4-routing.md  4-templates.md  5-language-switching.md  6-search.md
scripts/: extract-translatable-strings.js  fetch-translations.sh
wagtail_i18n/: bootstrap.py  models.py  urls.py  views.py
wagtail_i18n/migrations/: 0002_region.py  0003_initial_data.py  0004_locale.py  0005_language_is_active.py  0006_region_is_default.py  0007_set_region_is_default.py  0008_region_ordering.py  0009_region_is_active.py  0010_language_and_locale_ordering.py  0011_model_managers.py
wagtail_i18n/segment_formatters/: __init__.py  html.py
wagtail_i18n/segments/: __init__.py  extract.py  html.py  ingest.py
wagtail_localize/: __init__.py  admin_views.py  apps.py  bootstrap.py  bulk_actions.py  compat.py  components.py  edit_handlers.py  fields.py  models.py  operations.py  side_panels.py  signals.py  strings.py  synctree.py  tasks.py  utils.py  version.py  wagtail_hooks.py
wagtail_localize/git/: __init__.py  apps.py  git.py  importer.py  models.py  sync.py  views.py  wagtail_hooks.py
wagtail_localize/locales/: __init__.py  apps.py  components.py  forms.py  tests.py  utils.py  views.py  wagtail_hooks.py
wagtail_localize/machine_translators/: __init__.py  base.py  deepl.py  dummy.py  google.py  google_translate.py  libretranslate.py
wagtail_localize/migrations/: 0001_initial.py  0002_initial_data.py  0002_region.py  0002_translation.py  0003_delete_region_model.py  0003_delete_translation_sources.py  0003_if_untranslated.py  0003_initial_data.py  0004_locale.py  0004_locale_language_code.py  0004_one_source_per_objectlocale.py  0005_language_is_active.py  0005_populate_locale_language_code.py  0005_remove_translationsource_object.py  0006_create_submit_translation_permission.py  0006_delete_language_model.py  0006_region_is_default.py  0007_set_region_is_default.py  0007_stringtranslation_type_and_tool_name.py  0007_translatableobject.py  0008_region_ordering.py  0008_stringtranslation_last_translated_by.py  0009_region_is_active.py  0009_stringtranslation_errors.py  0010_language_and_locale_ordering.py  0010_localesynchronisation.py  0010_overridablesegment.py  0011_model_managers.py  0011_segmentoverride.py  0012_localesynchronization.py  0012_merge_20201008_1225.py  0013_translationsource_schema_version.py  0014_remove_translation_source_last_updated_at.py  0014_translationcontext_field_path.py  0015_translationcontext_field_path.py  0016_rename_page_revision_translationlog_revision.py  0016_wagtail4_revision_model.py  0017_localesynchronization_sync_page_status.py
wagtail_localize/modeladmin/: __init__.py  apps.py  helpers.py  options.py  tests.py  views.py  wagtail_hooks.py
wagtail_localize/segments/: __init__.py  extract.py  html.py  ingest.py  types.py
wagtail_localize/static_src/: .prettierrc.toml  custom.d.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
wagtail_localize/templatetags/: chooser_urls.py  wagtail_localize_admin_tags.py
wagtail_localize/test/: __init__.py  apps.py  models.py  settings.py  urls.py  wagtail_hooks.py
wagtail_localize/tests/: __init__.py  apps.py  models.py  settings.py  test_admin_views.py  test_compat.py  test_convert_to_alias.py  test_edit_translation.py  test_get_translatable_fields.py  test_hooks.py  test_html_segment_extraction.py  test_html_segments.py  test_language_region_locale_models.py  test_locale_model.py  test_mixins.py  test_modeladmin.py  test_operations.py  test_segment_extraction.py  test_segmentvalue.py  test_signals.py  test_strings.py  test_submit_translations.py  test_synctree.py  test_tasks.py  test_translate_all_pages.py  test_translate_views.py  test_translation_components.py  test_translation_model.py  test_translations_report.py  test_translationsource.py  test_translationsource_model.py  test_update_translations.py  test_utils.py  test_workflow_views.py  urls.py  utils.py
wagtail_localize/translation/: __init__.py  apps.py  models.py  strings.py  utils.py  wagtail_hooks.py
wagtail_localize/translation_memory/: __init__.py  apps.py  models.py  translation_ingestor.py  utils.py
wagtail_localize/utils/: detect_country.py
wagtail_localize/views/: convert.py  create_translation_request.py  edit_translation.py  management.py  report.py  snippets_api.py  submit_translations.py  translate.py  update_translations.py
wagtail_localize/workflow/: __init__.py  action_modules.py  apps.py  models.py  wagtail_hooks.py
wagtail_translation/: bootstrap.py  compat.py  models.py  utils.py
wagtail_translation/migrations/: 0001_initial.py  0002_initial_data.py  0002_region.py  0003_initial_data.py  0004_locale.py  0005_language_is_active.py  0006_region_is_default.py  (+5 more)
(+808 files in other folders)
