[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wagtail-localize"
authors = [{name = "Karl Hobley", email = "karl@torchbox.com"}]
maintainers = [{name = "Dan Braghis", email="dan.braghis@torchbox.com"}]
description = "Translation plugin for Wagtail CMS"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 4",
    "Framework :: Wagtail :: 5"
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "Django>=3.2,<5.1",
    "Wagtail>=4.1",
    "polib>=1.1,<2.0",
    "typing_extensions>=4.0"
]

[project.optional-dependencies]
testing = [
    "dj-database-url>=2.1.0,<3",
    "freezegun>=1.2,<2",
    "django-rq>=2.5,<3.0",
    "google-cloud-translate>=3.0.0",
    "pre-commit>=3.4,<4"
]
documentation = [
    "mkdocs==1.4.3",
    "mkdocs-material>=9.1,<10",
    "mkdocstrings[python]==0.22.0",
    "mkdocs-autorefs>=0.4.0,<0.5",
    "mkdocs-include-markdown-plugin>=4.0.4,<5",
    "pygments>=2.15,<2.16",
]
google = [
    "google-cloud-translate>=3.0.0"
]

[project.urls]
Home = "https://www.wagtail-localize.org"
Source = "https://github.com/wagtail/wagtail-localize"
Documentation = "https://www.wagtail-localize.org"

[tool.flit.module]
name = "wagtail_localize"

[tool.flit.sdist]
exclude = [
    "wagtail_localize/static_src",
    "wagtail_localize/test",
    "wagtail_localize/**/tests",
    "wagtail_localize/static/.gitignore",
    "Makefile",
    "scripts",
    "docs",
    ".*",
    "*.js",
    "*.json",
    "*.ini",
    "*.yml",
    "netlify.toml",
    "ruff.toml",
    "testmanage.py",
]
include = [
    "wagtail_localize/static"
]


[tool.black]
target-version = ["py38"]
