[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wagtail-localize"
authors = [{name = "Karl Hobley", email = "karl@torchbox.com"}]
maintainers = [{name = "Dan Braghis", email="dan.braghis@torchbox.com"}]
description = "Translation plugin for Wagtail CMS"
readme = "README.md"
license = "BSD-3-Clause"
license-files = [ "LICENSE" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 6",
    "Framework :: Wagtail :: 7"
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "Django>=4.2,<6.0",
    "Wagtail>=6.3",
    "polib>=1.1,<2.0",
    "typing_extensions>=4.0"
]

[project.optional-dependencies]
google = [
    "google-cloud-translate>=3.0.0"
]
documentation = [
    "mkdocs==1.4.3",
    "mkdocs-material>=9.1,<10",
    "mkdocstrings[python]==0.22.0",
    "mkdocs-autorefs>=0.4.0,<0.5",
    "mkdocs-include-markdown-plugin>=4.0.4,<5",
    "pygments>=2.15,<2.16",
]
testing = [
    "dj-database-url>=2.1.0,<3",
    "freezegun>=1.2,<2",
    "django-rq>=2.5,<3.0",
    "google-cloud-translate>=3.0.0",
    "wagtail-modeladmin>=2.0,<3.0",
    "coverage>=7.0,<8.0"
]
linting = [
    "pre-commit>=4.2.0,<6"
]

[project.urls]
Home = "https://wagtail-localize.org"
Source = "https://github.com/wagtail/wagtail-localize"
Documentation = "https://wagtail-localize.org"

[tool.flit.module]
name = "wagtail_localize"

[tool.flit.sdist]
exclude = [
    "wagtail_localize/static_src",
    "wagtail_localize/test",
    "wagtail_localize/**/tests",
    "wagtail_localize/static/.gitignore",
    "Makefile",
    "scripts",
    "docs",
    ".*",
    "*.db",
    "*.js",
    "*.json",
    "*.ini",
    "*.sqlite3",
    "*.yml",
    "*.yaml",
    "netlify.toml",
    "ruff.toml",
    "testmanage.py",
]
include = [
    "wagtail_localize/static"
]
